src/objects/AR_test__c.object
<CustomObject>
    <fields>
        <fullName>AR_test_fied_1__c</fullName>
        <label>AR_test fied 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Picklist_Multi_Select__c</fullName>
        <label>Picklist (Multi-Select)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>65</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <label>contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AR test</label>
    <nameField>
        <label>AR test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>